added all files

--- a/SpaWellnessAppointmentManagementSystem.web/SpaWellnessAppointmentManagementSystem.Web.csproj
+++ b/SpaWellnessAppointmentManagementSystem.web/SpaWellnessAppointmentManagementSystem.Web.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\NewFolder\" />
+    <Folder Include="Views\Service\" />
+  </ItemGroup>
+
 </Project>
